# qmt-trade-mcp

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.claude/: settings.local.json
src/: logging_setup.py
src/xtdata_mcp/: __init__.py  __main__.py  server.py
src/xttrade_mcp/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_auth.py  test_server.py  test_trader.py
