[project]
name = "qmt-trade-mcp"
version = "0.1.0"
description = "基于 FastMCP 的 xtquant 行情数据 MCP 服务，通过 SSE 传输提供行情查询能力"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1",
    "xtquant>=250516.1.1",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx2>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

